--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@seald-io/nedb": "^4.0.2",
+    "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "selenium-webdriver": "^4.11.1"
   }
