--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
   },
   "dependencies": {
     "@seald-io/nedb": "^4.0.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.17",
+    "body-parser": "^1.20.2",
     "cheerio": "1.0.0-rc.12",
+    "chromedriver": "^115.0.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "selenium-webdriver": "^4.11.1"
   }
 }
