--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/main.js",
   "type": "module",
   "scripts": {
+    "compile:watch":"npx tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
